# study-mcp

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: NOTION_SETUP.md  claude_desktop_config.json
scripts/: create_notion_database.py
src/study_mcp/: server.py
src/study_mcp/core/: chunker.py  config.py  embeddings.py  transcript.py
src/study_mcp/db/: __init__.py  chroma.py  pgvector.py
src/study_mcp/tools/: help.py  ingest.py  list_materials.py  materials.py  notion.py  search.py
tests/: conftest.py  test_chroma.py  test_chunker.py  test_embeddings.py  test_ingest.py  test_list_materials.py  test_materials.py  test_search.py  test_server.py  test_transcript.py
